new section added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </section>
       <section class="hero">
         <section class="ins-hero">
+          <img src="assets/image.jpg" alt="" />
           <h3 class="hero-h3">Beebyt</h3>
           <h2 class="hero-h2">
             Bringing Your <br />
@@ -41,9 +42,40 @@
       <h1 class="cnt-heading">Here are our great team.</h1>
     </section>
     <!-- ended -->
-     <!-- section 3 starts here -->
-      <section class="cnt-3">
-         
-      </section>
+    <!-- section 3 starts here -->
+    <section class="cnt-3">
+      <!-- info card starts here -->
+      <!-- card 1 -->
+      <div class="info-cnt1">
+        <h1 class="cnt1h1">hello guys</h1>
+        <img src="assets/agresh.jpeg" alt="" class="cnt1-img" />
+      </div>
+      <!-- card 2 -->
+      <div class="info-cnt1">
+        <h1 class="cnt1h1">hello guys</h1>
+        <img src="assets/agresh.jpeg" alt="" class="cnt1-img" />
+      </div>
+      <!-- card 3 -->
+      <div class="info-cnt1">
+        <h1 class="cnt1h1">hello guys</h1>
+        <img src="assets/agresh.jpeg" alt="" class="cnt1-img" />
+      </div>
+      <!-- card 4 -->
+      <div class="info-cnt1">
+        <h1 class="cnt1h1">hello guys</h1>
+        <img src="assets/agresh.jpeg" alt="" class="cnt1-img" />
+      </div>
+      <!-- card 5 -->
+      <div class="info-cnt1">
+        <h1 class="cnt1h1">hello guys</h1>
+        <img src="assets/agresh.jpeg" alt="" class="cnt1-img" />
+      </div>
+      <!-- card 6 -->
+      <div class="info-cnt1">
+        <h1 class="cnt1h1">hello guys</h1>
+        <img src="assets/agresh.jpeg" alt="" class="cnt1-img" />
+      </div>
+
+    </section>
   </body>
 </html>
