--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <h1 class="cnt1h1">hello guys</h1>
         <img src="assets/agresh.jpeg" alt="" class="cnt1-img" />
       </div>
-
+    </section>
+    <section class="cnt-4">
+      
     </section>
   </body>
 </html>
