--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       </div>
     </section>
     <section class="cnt-4">
-      
+      <h3 class="cnt4-txt">Service</h3>
+      <h1 class="cnt4-txt1">Explore Our Expertise: <br> Showcasing Excellence and Innovation in Every Solution.</h1>
     </section>
   </body>
 </html>
