new section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Major+Mono+Display&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -78,7 +84,102 @@
     </section>
     <section class="cnt-4">
       <h3 class="cnt4-txt">Service</h3>
-      <h1 class="cnt4-txt1">Explore Our Expertise: <br> Showcasing Excellence and Innovation in Every Solution.</h1>
+      <h1 class="cnt4-txt1">
+        Explore Our Expertise:<br />Showcasing Excellence and Innovation in
+        Every Solution.
+      </h1>
     </section>
+    <section class="cnt-5">
+      <!-- 1 -->
+      <div class="cnt5-box1">
+        <h2 class="cnt5-txt">
+          Search Engine <br />
+          Optimization (SEO)
+        </h2>
+        <p class="cnt5-para">
+          Search Engine Optimization <br />
+          helps your business rank <br />higher on search engines like
+          Google,<br />
+          bringing more visitors <br />
+          to your website and boosting <br />
+          sales without paid ads.
+        </p>
+      </div>
+      <!-- 2 -->
+      <div class="cnt5-box1">
+        <h2 class="cnt5-txt">
+          Search Engine <br />
+          Optimization (SEO)
+        </h2>
+        <p class="cnt5-para">
+          Search Engine Optimization <br />
+          helps your business rank <br />higher on search engines like
+          Google,<br />
+          bringing more visitors <br />
+          to your website and boosting <br />
+          sales without paid ads.
+        </p>
+      </div>
+      <!-- 3 -->
+      <div class="cnt5-box1">
+        <h2 class="cnt5-txt">
+          Search Engine <br />
+          Optimization (SEO)
+        </h2>
+        <p class="cnt5-para">
+          Search Engine Optimization <br />
+          helps your business rank <br />higher on search engines like
+          Google,<br />
+          bringing more visitors <br />
+          to your website and boosting <br />
+          sales without paid ads.
+        </p>
+      </div>
+      <div class="cnt5-box1">
+        <h2 class="cnt5-txt">
+          Search Engine <br />
+          Optimization (SEO)
+        </h2>
+        <p class="cnt5-para">
+          Search Engine Optimization <br />
+          helps your business rank <br />higher on search engines like
+          Google,<br />
+          bringing more visitors <br />
+          to your website and boosting <br />
+          sales without paid ads.
+        </p>
+      </div>
+      <!-- 2 -->
+      <div class="cnt5-box1">
+        <h2 class="cnt5-txt">
+          Search Engine <br />
+          Optimization (SEO)
+        </h2>
+        <p class="cnt5-para">
+          Search Engine Optimization <br />
+          helps your business rank <br />higher on search engines like
+          Google,<br />
+          bringing more visitors <br />
+          to your website and boosting <br />
+          sales without paid ads.
+        </p>
+      </div>
+      <!-- 3 -->
+      <div class="cnt5-box1">
+        <h2 class="cnt5-txt">
+          Search Engine <br />
+          Optimization (SEO)
+        </h2>
+        <p class="cnt5-para">
+          Search Engine Optimization <br />
+          helps your business rank <br />higher on search engines like
+          Google,<br />
+          bringing more visitors <br />
+          to your website and boosting <br />
+          sales without paid ads.
+        </p>
+      </div>
+    </section>
+    <section class="cnt-6"></section>
   </body>
 </html>
