new sections added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Beebyt - Digital Marketing and Software Solutions</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaquiries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,7 +26,7 @@
       <section class="hero">
         <section class="ins-hero">
           <img src="assets/image.jpg" alt="" />
-          <h3 class="hero-h3">Beebyt</h3>
+          <h3 class="hero-h3">—— Beebyt</h3>
           <h2 class="hero-h2">
             Bringing Your <br />
             Vision to Life <br />
@@ -180,6 +181,107 @@
         </p>
       </div>
     </section>
-    <section class="cnt-6"></section>
+    <section class="cnt-6">
+      <!-- 1 -->
+      <div class="cnt6-box1">
+        <h2 class="cnt6-txt">Business Consulting</h2>
+        <p class="cnt6-para">
+          Business consulting provides expert advice and solutions to help
+          companies improve performance, streamline operations, and achieve
+          growth goals
+        </p>
+      </div>
+      <!-- 2 -->
+      <div class="cnt6-box1">
+        <h2 class="cnt6-txt">Business Consulting</h2>
+        <p class="cnt6-para">
+          Business consulting provides expert advice and solutions to help
+          companies improve performance, streamline operations, and achieve
+          growth goals
+        </p>
+      </div>
+      <!-- 1 -->
+      <div class="cnt6-box1">
+        <h2 class="cnt6-txt">Business Consulting</h2>
+        <p class="cnt6-para">
+          Business consulting provides expert advice and solutions to help
+          companies improve performance, streamline operations, and achieve
+          growth goals
+        </p>
+      </div>
+      <!-- 2 -->
+      <div class="cnt6-box1">
+        <h2 class="cnt6-txt">Business Consulting</h2>
+        <p class="cnt6-para">
+          Business consulting provides expert advice and solutions to help
+          companies improve performance, streamline operations, and achieve
+          growth goals
+        </p>
+      </div>
+    </section>
+    <section class="cnt-7">
+      <h3 class="cnt4-txt">Get In Touch</h3>
+      <h1 class="cnt4-txt1">
+        We love to hear from you. Whether you have <br />
+        a question or just want to chat about <br />
+        business, & tech — shoot us a message.
+      </h1>
+    </section>
+    <section class="cnt-8">
+      <div class="side1">
+        <h3 class="cnt6-reach">Reach us at</h3>
+        <h2 class="cnt6-mail">beebytbusinesssolution@gmail.com</h2>
+        <h2 class="cnt6-phone">+91 70 125 58020</h2>
+        <h3 class="cnt6-social">SOCIAL</h3>
+        <div class="socialmedia">
+          <a href="#">Instagram</a><a href="#">Facebook</a><a href="#">Thread</a
+          ><a href="#">Youtube</a>
+        </div>
+        <h2 class="cnt-6map">OUR LOCATION</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3216.178097749458!2d76.08213377406847!3d11.60430008859933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba6733cfd8b9603%3A0x1ea927a06cf63ad0!2sBeebyt%20Learning%20Hub!5e1!3m2!1sen!2sin!4v1754279585854!5m2!1sen!2sin"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+      <div class="side2">
+        <form action="">
+          <input class="name-la" type="text" placeholder="Your Name" /> <br />
+          <input
+            class="email-la"
+            type="email"
+            name=""
+            id=""
+            placeholder="Your Email"
+          />
+          <br />
+          <input
+            class="phone-la"
+            type="number"
+            name=""
+            id=""
+            placeholder="Your Contact"
+          />
+          <br />
+          <input
+            class="message-la"
+            type="text"
+            name=""
+            id=""
+            placeholder="Your Message"
+          />
+          <br />
+          <input class="submit-bt" type="submit" />
+        </form>
+      </div>
+    </section>
+    <footer>
+      <h2>
+        © Copyright beebyt 20242nd Floor Hilite Business Park, Calicut, Kerala,
+        India
+      </h2>
+    </footer>
   </body>
 </html>
